# caspin

./: CMakeLists.txt  colors.py  tamarin_build.py  tamarin_changes.diff  tamarin_setup.py
as3/: build.py  caspin_base.as
cmake/: Findtamarin.cmake  build_tools.cmake  caspin_globals.cmake  folders4cmake.cmake
dev/: create_tamarin_patch.py  create_win32_release.py  fetch_adobe_as3.py
dev/tests/cpp_interface/as3/: build.py  test_cpp_interface.as
dev/tests/cpp_interface/include/: test_avm_class_methods.h  test_avm_string_methods.h  test_base.h  test_csp_string_methods.h
dev/tests/cpp_interface/scripts/: CMakeLists.txt  test_cpp_interface_src_files.cmake  test_cpp_interface_src_files.cmake.rule
dev/tests/cpp_interface/src/: test_cpp_interface.cpp
docs/: Doxyfile  caspin_doc.xml
include/: caspin_base.h  cspNativePackage.h  cspOutputListener.h  cspOutputLogger.h  cspPrerequisites.h  cspScriptDefinition.h  cspSystem.h  cspUnixPlatform.h  cspVmCore.h  cspWinPlatform.h
samples/auto_bind/as3/: MyClass.as  build.py  playpen.as
samples/auto_bind/include/: MyClass.h  auto_bind.h  auto_classes.h
samples/auto_bind/scripts/: CMakeLists.txt  auto_bind_src_files.cmake
samples/auto_bind/src/: MyClass.cpp  auto_bind_main.cpp  auto_classes.cpp
samples/flash/as3/: flash_display.as  flash_events.as
samples/flash/include/: DisplayObject.h  EventDispatcher.h  InteractiveObject.h  SimpleButton.h  flash_classes.h
samples/flash/src/: DisplayObject.cpp  EventDispatcher.cpp  InteractiveObject.cpp  SimpleButton.cpp  flash_classes.cpp  flash_main.cpp
samples/minimal/as3/: build.py  minimal.as
samples/minimal/scripts/: CMakeLists.txt  minimal_src_files.cmake  source_files.cmake
samples/minimal/src/: minimal_main.cpp
samples/native_classes/as3/: build.py  build_myclasses.py  build_playpen.py  myclasses.as  playpen.as
samples/native_classes/include/: MyClass.h
samples/native_classes/scripts/: CMakeLists.txt  native_classes_src_files.cmake  source_files.cmake
samples/native_classes/src/: MyClass.cpp  native_classes_main.cpp
scripts/: CMakeLists.txt  caspin_src_files.cmake  source_files.cmake
src/: caspin_base.cpp  cspOutputLogger.cpp  cspSystem.cpp  cspVmCore.cpp
tools/: cspcompile.py  cspgenerate.py  files.py
